--- a/index.css
+++ b/index.css
@@ -38,7 +38,7 @@ header {
     position:fixed;
     font-weight:bold;
     background:transparent;
-    color:#fff;
+    color:#000;
     transition:0.4s ease-in-out;
     z-index:2;
 }
@@ -164,7 +164,7 @@ header table {
 #rightImage {
     width:100%;
     height:95vh;
-    background:linear-gradient(0deg,rgba(255, 44, 90, 0.8),rgba(2255, 44, 90, 0.8)),url("https://images.unsplash.com/photo-1506057527569-6a0285b2fcc1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=60") center center;
+    background:linear-gradient(0deg,rgba(255, 44, 90, 0.15),rgba(255, 44, 90, 0.15)),url("https://i.ibb.co/HqrRYxY/fabian-grohs-z-E007-SNgcd-E-unsplash.jpg") center center;
     background-size:cover;
     background-repeat:no-repeat;
 }
