--- a/index.css
+++ b/index.css
@@ -224,6 +224,7 @@ header table {
     width:92vw;
     padding:6vh 4vw;
     font-weight:bold;
+    text-align:justify;
 }
 #bio h1 {
     padding:5px 0px;
