--- a/index.css
+++ b/index.css
@@ -182,7 +182,7 @@ header table {
 }
 .hvrbox .hvrbox-text {
 	text-align: center;
-	font-size: 18px;
+	font-size: 1.17vw;
 	display: inline-block;
 	position: absolute;
 	top: 50%;
@@ -193,7 +193,7 @@ header table {
 	transform: translate(-50%, -50%);
 }
 .hvrbox .hvrbox-text_mobile {
-	font-size: 15px;
+	font-size: 1.17vw;
 	border-top: 1px solid rgb(179, 179, 179); /* for old browsers */
 	border-top: 1px solid rgba(179, 179, 179, 0.7);
 	margin-top: 5px;
