--- a/index.css
+++ b/index.css
@@ -361,4 +361,18 @@ button:focus {
     #navigation a {
         color:#000;
     }
+    hvrbox.hvrbox-text{
+        text-align: center;
+        font-size: 1.17vw;
+    }
+    .btn{position:absolute;
+      top:10%
+      left:10%}
+}
+
+@media screen and (max-width: 768px) {
+  .btn{position:absolute;
+      top:10%
+      left:10%}
+
 }
